<?xml version="1.0"?>
<package format="2">
    <name>semubot_gazebo</name>
    <version>0.0.1</version>
    <description>Gazebo simulation for Semubot</description>

    <maintainer email="antonlaidmets@gmail.com">Anton Laidmets</maintainer>

    <url type="repository">https://github.com/SemuBot/semubot_gazebo</url>

    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>ros_gz_sim</build_depend>

    <exec_depend>semubot_description</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>ros_gz_sim</exec_depend>
    <exec_depend>ros_gz_bridge</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_media_path="${prefix}"/>
    </export>
</package>
